# mpesa-sdk

./: '  Cargo.toml  README.md  todo.txt
src/: client.rs  lib.rs  main.rs
src/services/: c2b.rs  lipanampesa.rs  mod.rs  register.rs
tests/: mpesa_integration.rs
