[package]
name = "mpesa-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24.2"
tokio = { version = "1", features = ["full"] }
