[package]
name = "mpesa-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
# strum = "0.24.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]} 
thiserror = "1.0"
base64 = "0.13.0"

[dev_dependencies]
tokio-test = "*"
